# SEEDS

./: .editorconfig  .gitignore  AI-CONTROLLER.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  android-voice-controller-design.md  render.yaml  start.sh  start.sh.bak  test.py
ConferenceV2/: .gitignore  ARCHITECTURE.md  COMPLETE_MUTING_FIX_SUMMARY.md  CRITICAL_FIXES_APPLIED.md  Dockerfile  MUTING_FIX_IMPLEMENTATION.md  MUTING_ISSUE_ANALYSIS.md  PHASE3_IMPLEMENTATION.md  TESTING_STRATEGY.md  config.py  conftest.py  debug_settings.py  docker-compose.test.yml  env.example  main.py  manual_test_audio_upload.py  pyproject.toml  readme.md  requirements.txt  test_audio_capture.py
ConferenceV2/app/: conf_logger.py  main.py
ConferenceV2/app/application_logger/: azure_app_insights.py
ConferenceV2/app/core/: telemetry.py
ConferenceV2/app/models/: action_history.py  audio_content_state.py  conference_call_state.py  participant.py  ws_service_message.py
ConferenceV2/app/routers/: audio_stream.py  caller_state.py  conference.py  webhooks.py  websocket.py
ConferenceV2/app/schemas/: conference_schemas.py
ConferenceV2/app/services/: audio_stream_analyzer.py  caller_state_manager.py  conference_call.py  redis_conference_store.py  stream_system_messages.py  vanilla_websocket_service.py
ConferenceV2/docs/: deployment.md
ConferenceV2/models/: system_audio_messages.py  websocket_message.py  ws_service_message.py
ConferenceV2/routers/: conference.py  webhooks.py  websocket.py
ConferenceV2/services/: conference_call.py  conference_call_manager.py  stream_system_messages.py  websocket_service.py
ConferenceV2/services/communication_api/: base_communication_api.py  communication_api_factory.py  vonage_api.py
ConferenceV2/services/confevents/: call_status_change_event.py  dtmf_input_event.py  end_conf_event.py  mute_all_event.py  mute_participant_event.py  pause_content_event.py  play_content_event.py  playback_state_update_event.py  reconnect_comm_api_websocket_event.py  remove_participant_event.py  resume_content_event.py  sink_conf_event.py  unmute_participant_event.py
ConferenceV2/services/singletons/: azure_service_bus_service.py  conference_call_manager.py  sas_gen.py  websocket_service.py
ConferenceV2/services/smartphone_connection_manager/: sse_connection_manager.py
ConferenceV2/tests/: mock_ws_server.py  test_audio_analyzer_dsp.py  test_audio_capture.py  test_audio_hold_validation.py  test_audio_ml.py  test_audio_transcriber_and_websocket_service_regressions.py  test_conference_call.py  test_conference_call_manager.py  test_hold_detected_event.py  test_mongodb_storage.py  test_participant_names.py  test_relay_audio_capture.py  test_seek_feature.py  test_transfer_event.py  test_vonage_api_timeout.py
ConferenceV2/tests/e2e/: conftest.py  test_audio.py  test_lifecycle.py  test_mute.py  test_participants.py
ConferenceV2/tests/unit/: test_audio_hold_validation.py  test_audio_transcriber_and_websocket_service_regressions.py  test_conference_call_state_serialization.py  test_hold_detected_event.py  test_sse_connection_manager.py  test_websocket_audio_processor.py
IVRv2/: .dockerignore  .gitignore  Dockerfile  README.md  TEST_PLAN.md  comprehension_model_classes.py  comprehension_structure.py  contents.json  deploy.sh  env.example  fsm.json  ivr.py  locustfile.py  main.py  pyproject.toml  refactor_demo.py  refactor_test.py  requirements-test.txt  requirements.txt  settings.py
IVRv2/actions/vonage_actions/: vonage_action_factory.py
IVRv2/app/: comprehension_model_classes.py  comprehension_structure.py  contents.json  dependencies.py  fsm.json  ivr.py  main.py  refactor_demo.py  settings.py
IVRv2/app/application_logger/: azure_app_insights.py
IVRv2/app/base_classes/: action_accumulator.py  action_factory.py  base_fsm_operation.py  base_process_operation_output.py
IVRv2/app/core/: __init__.py  database.py  dependencies.py  lifespan.py  state.py  telemetry.py
IVRv2/app/fsm/: contentsV3.json  dummy_instantiation.py  fsm.py  instantiation.py  insti.py  insti_copy.py  ivr_constants.py  ivr_utils.py  pureAudio.py  quiz.py  radio_instantiation.py  state.py  transition.py  url_paths.py  visualiseIVR.py
IVRv2/app/interfaces/: database.py
IVRv2/app/repositories/: comprehension_repository.py
IVRv2/app/services/: service_bus_manager.py  websocket_service.py
IVRv2/app/utils/: audio.py  daily_limit.py  distributed_lock.py  duration_announcement.py  idempotency.py  ivr_utils.py  model_classes.py  mongodb.py  pause_announcement.py  pure_audio_model_classes.py  sas_gen.py  speed_control.py  ws_service_message.py
IVRv2/app/workers/: base_processor.py  call_processor.py
IVRv2/docs/: deployment.md  load-testing-guide.md
IVRv2/fsm/: contentsV3.json  dummy_instantiation.py  fsm.py  instantiation.py  insti.py  insti_copy.py  ivr_constants.py  ivr_utils.py  pureAudio.py  radio_instantiation.py  url_paths.py
IVRv2/tests/: conftest.py  test_comprehension_structure.py  test_insti.py
IVRv2/tests/fixtures/: comprehension_data.py
IVRv2/utils/: model_classes.py  mongodb.py  pure_audio_model_classes.py  sas_gen.py
platform/: .dockerignore  .gitignore  Dockerfile  READINESS_REPORT.md  README.md  TEST_PLAN.md  env.example  pyproject.toml
platform/app/: main.py  router.py
platform/docs/: platform-review-findings.md
platform/migrations/: 001_rollback_unify_users.py  001_unify_users.py  001_verify_unify_users.py  002_tenant_scoped_indexes.py  002_verify_tenant_scoped_indexes.py  003_quizdata_objectid_to_string.py  004_users_snake_case_fields.py  005_contentsv3_snake_case.py  005b_contentsv3_duration_seconds.py  006_classes_snake_case.py  007_conferencestate_snake_case.py  008_comprehension_snake_case.py  009_fsmcontexts_snake_case.py  010_logs_snake_case.py  011_logentries_snake_case.py  012_callslogs_oid.py  013_ivrfsms_oid.py  014_conferencestate_oid.py  015_conferences_oid.py  016_coerce_user_ref_ids_to_objectid.py  017_contentsv3_oid.py  migrate.py
platform/tests/: conftest.py
platform/tools/: parity_check.py  run_parity_check.py
(+1102 files in other folders)
