[tool.poetry]
package-mode = false

[project]
name = "Conferencev2"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "azure-cosmos",
    "azure-servicebus",
    "azure-identity",
    "azure-storage-blob",
    "vonage<3",
    "aiohttp",
    "websockets",
    "azure-monitor-opentelemetry>=1.6.0,<2.0.0",
    "opentelemetry-api>=1.27.0,<1.30.0",
    "opentelemetry-sdk>=1.27.0,<1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-pymongo>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-httpx>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-requests>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-logging>=0.48b0,<1.0.0",
    "azure-monitor-events-extension>=0.1.0,<0.2.0",
    "pytz",
    "httpx",
    "motor",
    "pymongo",
    "openai",
    "numpy",
    "scipy",
    "webrtcvad",
    "redis[hiredis]>=5.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"
