[tool.poetry]
name = "platform"
version = "0.1.0"
description = "Unified SEEDS platform - FastAPI"
authors = ["SEEDS Team <seeds@a4i.org>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115"
uvicorn = {extras = ["standard"], version = ">=0.30"}
motor = ">=3.4"
pymongo = ">=4.6"
pydantic-settings = ">=2.2"
pydantic = {extras = ["email"], version = ">=2.6"}
python-jose = {extras = ["cryptography"], version = ">=3.3"}
passlib = {extras = ["bcrypt"], version = ">=1.7"}
azure-servicebus = ">=7.12"
azure-storage-blob = ">=12.19"
azure-identity = ">=1.15"
azure-monitor-opentelemetry = ">=1.2"
opentelemetry-instrumentation-fastapi = ">=0.44b0"
opentelemetry-instrumentation-pymongo = ">=0.44b0"
httpx = ">=0.27"
vonage = "3.17.1"
firebase-admin = ">=6.3"
python-multipart = ">=0.0.9"
slowapi = ">=0.1.9"
redis = {extras = ["hiredis"], version = ">=5.0"}
aiohttp = ">=3.9"
python-dateutil = ">=2.9"
bcrypt = ">=4.0"
cryptography = ">=41.0"
numpy = ">=1.26"
scipy = ">=1.12"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=4.1"
httpx = ">=0.27"
mongomock-motor = ">=0.0.21"
bandit = ">=1.7"
anyio = {extras = ["trio"], version = ">=4.0"}
ruff = ">=0.4"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "B904", "SIM117"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--ignore=tests/parity"
markers = ["parity: live-service parity tests (deselect with -m 'not parity')"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
